added home link to the header

--- a/html/Stock_Class.html
+++ b/html/Stock_Class.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="header">
-        <a href="../index.html" class="header-left">TraderPy</a>
+        <a href="../index.html" class="header-left">Home</a>
+        <a href="../index.html" class="header-middle">TraderPy</a>
         <div class="header-right">
           <a href="">Contact</a>
         </div>
