--- a/html/TD_Class.html
+++ b/html/TD_Class.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <div class="header">
-        <a href="../index.html" class="header-left">TraderPy</a>
-        <div class="header-right">
+      <a href="../index.html" class="header-left">Home</a>
+      <a href="" class="header-middle">TraderPy</a>
+              <div class="header-right">
           <a href="">Contact</a>
-        </div>
-      </div> 
+              </div>
+   </div> 
 <div class="sidenav">
 <ul>
   <a href="./Stock_Class.html" class="navItems">Stock Class</a>
