--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 </head>
 <body>
     <div class="header">
-            <a href="./index.html" class="header-left">TraderPy</a>
-            <div class="header-right">
+      <a href="./index.html" class="header-left">Home</a>
+      <a href="./index.html" class="header-middle">TraderPy</a>
+         <div class="header-right">
               <a href="">Contact</a>
-            </div>
-          </div> 
+        </div>
+      </div> 
   <div class="sidenav">
     <ul>
-      <a href="./html/Stock_Class.html" class="navItems">Stock Class</a>
-      <a href="./html/TD_Class.html" class="navItems">TD Class</a>
+      <a href="./html/Stock_Class.html">Stock Class</a>
+      <a href="./html/TD_Class.html" >TD Class</a>
     </ul>
   </div>
 <div class="main">
