added hover color to sidenav links

--- a/html/Stock_Class.html
+++ b/html/Stock_Class.html
@@ -17,7 +17,7 @@
       </div> 
 <div class="sidenav">
   <ul>
-    <a href="" class="navItems">Stock Class</a>
+    <a href="" class="navItems active">Stock Class</a>
     <a href="./TD_Class.html" class="navItems">TD Class</a>
 </ul>
 
