--- a/html/TD_Class.html
+++ b/html/TD_Class.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">
       <a href="../index.html" class="header-left">Home</a>
-      <a href="" class="header-middle">TraderPy</a>
+      <a href="../index.html" class="header-middle">TraderPy</a>
               <div class="header-right">
           <a href="">Contact</a>
               </div>
@@ -18,7 +18,7 @@
 <div class="sidenav">
 <ul>
   <a href="./Stock_Class.html" class="navItems">Stock Class</a>
-  <a href="./TD_Class.html" class="navItems">TD Class</a>
+  <a href="./TD_Class.html" class="navItems active">TD Class</a>
 </ul>
 </div>
 
