--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       </div> 
   <div class="sidenav">
     <ul>
-      <a href="./html/Stock_Class.html">Stock Class</a>
-      <a href="./html/TD_Class.html" >TD Class</a>
+      <a class="navItems" href="./html/Stock_Class.html">Stock Class</a>
+      <a class="navItems" href="./html/TD_Class.html" >TD Class</a>
     </ul>
   </div>
 <div class="main">
