removed color from header links on hover

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
     <div class="header">
       <a href="./index.html" class="header-left">Home</a>
       <a href="./index.html" class="header-middle">TraderPy</a>
-         <div class="header-right">
-              <a href="">Contact</a>
-        </div>
-      </div> 
+         <a class="header-right" href="">Contact</a>
+    </div> 
   <div class="sidenav">
     <ul>
       <a class="navItems" href="./html/Stock_Class.html">Stock Class</a>
