fixed snippet styling

--- a/html/Stock_Class.html
+++ b/html/Stock_Class.html
@@ -84,15 +84,15 @@
     <h2>Example</h2>
     <div class="snippet">
       ticker = "FB"</br>
-stock_object = Stock(ticker)<br>
+      stock_object = Stock(ticker)<br>
 
-<p>tenDay = stock_oject.tenDayAverage()</br>
-thirtyDay = stock_oject.thirtyDayAverage()</p>
+      <p>tenDay = stock_oject.tenDayAverage()</br>
+      thirtyDay = stock_oject.thirtyDayAverage()</p>
 
-if tenDay >= thirtyDay:</br>
-    stock_object.buyStock</br>
-else:</br>
-   pass
+      if tenDay >= thirtyDay:</br>
+      <span class="indent">stock_object.buyStock</span></br>
+        else:</br>
+       <span class="indent">pass</span>
     </div>
   </article>
 </div>
