--- a/html/TD_Class.html
+++ b/html/TD_Class.html
@@ -121,9 +121,9 @@
             currentPositions = api.getPositions() </p>
             
             if ticker in currentPositions:</br>
-               print(api.getPositionValue(ticker = ticker))</br>
+              <span class="indent">print(api.getPositionValue(ticker = ticker))</span></br>
             else:</br>
-               print(ticker + "is not in your current positions")
+               <span class="indent">print(ticker + "is not in your current positions")</span>
           </div>
 
     </article>
