fixed sideNav spelling

--- a/html/TD_Class.html
+++ b/html/TD_Class.html
@@ -11,11 +11,9 @@
     <div class="header">
       <a href="../index.html" class="headerLeft">Home</a>
       <a href="../index.html" class="headerMiddle">TraderPy</a>
-              <div class="headerRight">
-          <a href="">Contact</a>
-              </div>
+              <a class="headerRight" href="../index.html#contact">Contact</a>
    </div> 
-<div class="sidenav">
+<div class="sideNav">
 <ul>
   <a href="./Stock_Class.html" class="navItems">Stock Class</a>
   <a href="./TD_Class.html" class="navItems active">TD Class</a>
