--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="header">
-      <a href="./index.html" class="header-left">Home</a>
-      <a href="./index.html" class="header-middle">TraderPy</a>
-         <a class="header-right" href="">Contact</a>
+      <a href="./index.html" class="headerLeft">Home</a>
+      <a href="./index.html" class="headerMiddle">TraderPy</a>
+         <a class="headerRight" href="./index.html#contact">Contact</a>
     </div> 
-  <div class="sidenav">
+  <div class="sideNav">
     <ul>
       <a class="navItems" href="./html/Stock_Class.html">Stock Class</a>
       <a class="navItems" href="./html/TD_Class.html" >TD Class</a>
@@ -27,7 +27,7 @@
   </article>
   <article class="installation">
   <h2>Installation</h2>
-  
+
    1. In the command line clone this repository</br>
     <div class="snippet">git clone https://github.com/SamGulinello/TraderPY</div>
    2. CD into the repository</br>
@@ -104,7 +104,7 @@
       I would like to have these classes make getting data from TD Ameritrade as easy as possible. Next, I plan on documenting both those classes. There are already a number of cool things they can do but there is no way of knowing it without looking at the code. Documentation will either come in the form of another README or I have toyed with the idea of making a documentation website to accompany this project (will probably start with a README). Finally, I hope to develop a 'trailing stop' module. This will ensure the program doesn't hold a stock until the bitter end and will instead lock in a loss percentage value that will change as the stock hopefully goes up in value.</p>
   </article>
   <article class="support">
-    <h2>Support</h2>
+    <h2 id="contact">Support</h2>
     <p>If you have any question or feedback please let me know. You can contact me at <span class="email">sgulinello12@gmail.com</span>. 
       I will try my best to respond promptly. I hope to contribute to this project regularly because there is so much I would like to do with it. I am a full time college student so I can't promise anything.</p>
   </article>
